--- a/Views/Admin/inventory.cshtml
+++ b/Views/Admin/inventory.cshtml
@@ -15,7 +15,7 @@
             @Html.DisplayNameFor(model => model.Product_ID)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Stock)
+            @Html.DisplayNameFor(model => model.stock)
         </th>
         <th></th>
     </tr>
@@ -26,7 +26,7 @@
             @Html.DisplayFor(modelItem => item.Product_ID)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Stock)
+            @Html.DisplayFor(modelItem => item.stock)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
