--- a/Views/user/OHistory.cshtml
+++ b/Views/user/OHistory.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Bil_Add)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.shipp_Add)
+            @Html.DisplayNameFor(model => model.ship_Add)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Order_Amt)
@@ -42,7 +42,7 @@
             @Html.DisplayFor(modelItem => item.Bil_Add)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.shipp_Add)
+            @Html.DisplayFor(modelItem => item.ship_Add)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Order_Amt)
